syntax = "proto3";

package protobench;

option go_package = "test/test";

message SimplePerson {
  string name = 1;
  int32 age = 2;
  uint64 id = 3;
}

message ComplexMessage {
  uint64 id = 1;
  string name = 2;
  string email = 3;
  double score = 4;
  bool is_active = 5;
  repeated string tags = 6;
  repeated int32 numbers = 7;
  map<string, string> metadata = 8;
  int64 timestamp = 9;
}

message AddressInfo {
  string street = 1;
  string city = 2;
  string zipcode = 3;
  string country = 4;
}

message ExtraData {
  string notes = 1;
  int32 priority = 2;
  repeated bool flags = 3;
  repeated double config = 4;
}

message NestedMessage {
  SimplePerson person = 1;
  AddressInfo address = 2;
  repeated string phones = 3;
  ExtraData extra = 4;
  repeated SimplePerson personArray = 5;
}
